src/test/deca/context/valid/double_decl_extends.deca
class A{
boolean a;
}
class B extends A{
int x;
}
class C extends A{
int x;
}