src/test/deca/context/invalid/decl_method_protected_fields.deca
class A {
protected int x;
}
class B extends A {
A a;
int y = a.x;
}
